--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 		<Title>Wallace Family</Title>
 	</head>
 	<body>
-		<p>Welcome to the Wallace Home!</p>
-		<p>We are glad you are here!</p>
+		<p>Welcome to the Wallace Home</p>
 	</body>
 </html>
