Moved javascripts to javascript.js, added includes, added several troubleshooting peices

--- a/Pages/atlascon.htm
+++ b/Pages/atlascon.htm
@@ -3,21 +3,29 @@
 
 <!--The top Row/Nav section-->
 <div class="flex-row" id="1st-row">
-	<div class="placemark"><p>1st Row</p></div>
+	<div class="placemark" onclick="updateElement('status','click worked')"><p>1st Row</p>
+		<div class="placemark" id="status"><p>Firstload<p></div>
+	</div>
 </div>
 
 <!--The main content row-->
-<div class="flex-row" id="2nd-row" style="justify-content: flex-start">
+<div class="flex-row" id="2nd-row">
+
+	<div class="placemark"><p>2nd Row</p></div>
 	
 	<!--The first column-->
 	<div class="flex-column" id="myColumn1">
+		<div class="placemark"><p>myColumn1</p></div>
 	</div>
 	
 	<!--the second Column-->
 	<div class="flex-column" id="2nd-column">
+		<div class="placemark"><p>2nd-column</p></div>
 	</div>
 	
 </div>
 
-<script>
-	window.onload = "/Pagesbb
+<div><p>End of atlascon.htm</p></div>
+
+
+
