--- a/Pages/atlascon.htm
+++ b/Pages/atlascon.htm
@@ -3,7 +3,7 @@
 
 <!--The top Row/Nav section-->
 <div class="flex-row" id="1st-row">
-	<div class="placemark" onclick="updateElement('status','click worked')"><p>1st Row</p>
+	<div class="placemark" onclick="click worked"><p>1st What Row</p>
 		<div class="placemark" id="status"><p>Firstload<p></div>
 	</div>
 </div>
