the javascript on the altlascon page doesn't seem to be running...

--- a/Pages/atlascon.htm
+++ b/Pages/atlascon.htm
@@ -27,5 +27,11 @@
 
 <div><p>End of atlascon.htm</p></div>
 
+<div id="altasconload"></div>
+
+<script type="text/javascript">
+	alert("atlason.htm is loaded");
+	initatlascon();
+</script>
 
 
